--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,6 +46,35 @@ jobs:
       if-new-release:  ${{ steps.check-if-build.outputs.RELEASE }}
       release-version: ${{ steps.check-if-build.outputs.RELEASE_VERSION }}
 
+
+  dragonflybsd:
+    needs: check
+    if: needs.check.outputs.if-new-release == 'yes'
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        target-version: ['6.4']
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: vmactions/dragonflybsd-vm@v1
+        with:
+          release: "${{ matrix.target-version }}.0"
+          usesh: true
+          sync: rsync
+          copyback: true
+          run: ./pack.sh ${{ needs.check.outputs.release-version }} dragonflybsd-${{ matrix.target-version }}-x86_64
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: perl-${{ needs.check.outputs.release-version }}-dragonflybsd-${{ matrix.target-version }}-x86_64.tar.xz
+          path: perl-${{ needs.check.outputs.release-version }}-dragonflybsd-${{ matrix.target-version }}-x86_64.tar.xz
+
+
   freebsd:
     needs: check
     if: needs.check.outputs.if-new-release == 'yes'
@@ -55,12 +84,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target-version: ['14.1', '14.0', '13.3', '13.2']
+        target-version: ['14.1', '14.0', '13.4', '13.3', '13.2']
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: cross-platform-actions/action@v0.25.0
+      - uses: cross-platform-actions/action@master
         with:
           operating_system: freebsd
           version: ${{ matrix.target-version }}
@@ -82,12 +111,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target-version: ['7.5', '7.4', '7.3', '7.2']
+        target-version: ['7.6', '7.5', '7.4', '7.3', '7.2']
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: cross-platform-actions/action@v0.25.0
+      - uses: cross-platform-actions/action@master
         with:
           operating_system: openbsd
           version: ${{ matrix.target-version }}
@@ -98,6 +127,7 @@ jobs:
         with:
           name: perl-${{ needs.check.outputs.release-version }}-openbsd-${{ matrix.target-version }}-amd64.tar.xz
           path: perl-${{ needs.check.outputs.release-version }}-openbsd-${{ matrix.target-version }}-amd64.tar.xz
+
 
   netbsd:
     needs: check
@@ -271,7 +301,7 @@ jobs:
 
 
   publish:
-    needs: [check, freebsd, openbsd, netbsd, macos-arm64, macos-x86_64, linux-glibc, linux-musl]
+    needs: [check, dragonflybsd, freebsd, openbsd, netbsd, macos-arm64, macos-x86_64, linux-glibc, linux-musl]
     if: needs.check.outputs.if-new-release == 'yes'
 
     runs-on: ubuntu-latest
