--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -208,7 +208,7 @@ jobs:
           path: perl-${{ needs.check.outputs.release-version }}-macos-${{ matrix.target-version }}-x86_64.tar.xz
 
 
-  linux-glibc:
+  linux:
     needs: check
     if: needs.check.outputs.if-new-release == 'yes'
 
@@ -224,7 +224,7 @@ jobs:
 
       - run: |
           cat > run.sh <<EOF
-          ./pack.sh ${{ needs.check.outputs.release-version }} linux-glibc-${{ matrix.target-arch }}
+          ./pack.sh ${{ needs.check.outputs.release-version }} linux-any-${{ matrix.target-arch }}
           EOF
 
           chmod +x run.sh
@@ -234,74 +234,28 @@ jobs:
         run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 
       - if: matrix.target-arch == 'x86_64'
-        run: docker run -v $PWD:/root -w /root --name ubuntu         ubuntu:18.04 sh run.sh
+        run: docker run -v $PWD:/root -w /root --name ubuntu         ubuntu:24.04 sh run.sh
 
       - if: matrix.target-arch == 'aarch64'
-        run: docker run -v $PWD:/root -w /root --name ubuntu arm64v8/ubuntu:18.04 sh run.sh
+        run: docker run -v $PWD:/root -w /root --name ubuntu arm64v8/ubuntu:24.04 sh run.sh
 
       - if: matrix.target-arch == 'ppc64le'
-        run: docker run -v $PWD:/root -w /root --name ubuntu ppc64le/ubuntu:18.04 sh run.sh
+        run: docker run -v $PWD:/root -w /root --name ubuntu ppc64le/ubuntu:24.04 sh run.sh
 
       - if: matrix.target-arch == 'riscv64'
-        run: docker run -v $PWD:/root -w /root --name ubuntu riscv64/ubuntu:23.04 sh run.sh
+        run: docker run -v $PWD:/root -w /root --name ubuntu riscv64/ubuntu:24.04 sh run.sh
 
       - if: matrix.target-arch == 's390x'
-        run: docker run -v $PWD:/root -w /root --name ubuntu   s390x/ubuntu:18.04 sh run.sh
+        run: docker run -v $PWD:/root -w /root --name ubuntu   s390x/ubuntu:24.04 sh run.sh
 
       - uses: actions/upload-artifact@v4
         with:
-          name: perl-${{ needs.check.outputs.release-version }}-linux-glibc-${{ matrix.target-arch }}.tar.xz
-          path: perl-${{ needs.check.outputs.release-version }}-linux-glibc-${{ matrix.target-arch }}.tar.xz
-
-
-  linux-musl:
-    needs: check
-    if: needs.check.outputs.if-new-release == 'yes'
-
-    strategy:
-      fail-fast: false
-      matrix:
-        target-arch: [x86_64, aarch64, ppc64le, riscv64, s390x]
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - run: |
-          cat > run.sh <<EOF
-          ./pack.sh ${{ needs.check.outputs.release-version }} linux-musl-${{ matrix.target-arch }}
-          EOF
-
-          chmod +x run.sh
-
-      # https://github.com/multiarch/qemu-user-static
-      - if: matrix.target-arch != 'x86_64'
-        run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-
-      - if: matrix.target-arch == 'x86_64'
-        run: docker run -v $PWD:/root -w /root --name alpine         alpine sh run.sh
-
-      - if: matrix.target-arch == 'aarch64'
-        run: docker run -v $PWD:/root -w /root --name alpine arm64v8/alpine sh run.sh
-
-      - if: matrix.target-arch == 'ppc64le'
-        run: docker run -v $PWD:/root -w /root --name alpine ppc64le/alpine sh run.sh
-
-      - if: matrix.target-arch == 'riscv64'
-        run: docker run -v $PWD:/root -w /root --name alpine riscv64/alpine sh run.sh
-
-      - if: matrix.target-arch == 's390x'
-        run: docker run -v $PWD:/root -w /root --name alpine   s390x/alpine sh run.sh
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: perl-${{ needs.check.outputs.release-version }}-linux-musl-${{ matrix.target-arch }}.tar.xz
-          path: perl-${{ needs.check.outputs.release-version }}-linux-musl-${{ matrix.target-arch }}.tar.xz
+          name: perl-${{ needs.check.outputs.release-version }}-linux-any-${{ matrix.target-arch }}.tar.xz
+          path: perl-${{ needs.check.outputs.release-version }}-linux-any-${{ matrix.target-arch }}.tar.xz
 
 
   publish:
-    needs: [check, dragonflybsd, freebsd, openbsd, netbsd, macos-arm64, macos-x86_64, linux-glibc, linux-musl]
+    needs: [check, dragonflybsd, freebsd, openbsd, netbsd, macos-arm64, macos-x86_64, linux]
     if: needs.check.outputs.if-new-release == 'yes'
 
     runs-on: ubuntu-latest
