--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -236,6 +236,9 @@ jobs:
       matrix:
         target-arch: [aarch64, ppc64le, riscv64, s390x]
 
+    steps:
+      - uses: actions/checkout@v4
+
       - run: |
           case ${{ matrix.target-arch }} in
             x86_64)  X=amd64 ;;
@@ -249,6 +252,7 @@ jobs:
       - run: tar xf ubuntu-base-24.04.1-base-*.tar.gz -C ubuntu-rootfs
 
       - run: cp -p /etc/resolv.conf ubuntu-rootfs/etc/
+      - run: cp build.sh pack.sh perl.c ubuntu-rootfs/etc/
 
       - run: sudo mount -o bind  /dev ubuntu-rootfs/dev
       - run: sudo mount -t proc  none ubuntu-rootfs/proc
