--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -252,7 +252,7 @@ jobs:
       - run: tar xf ubuntu-base-24.04.1-base-*.tar.gz -C ubuntu-rootfs
 
       - run: cp -p /etc/resolv.conf ubuntu-rootfs/etc/
-      - run: cp build.sh pack.sh perl.c ubuntu-rootfs/etc/
+      - run: cp build.sh pack.sh perl.c ubuntu-rootfs/
 
       - run: sudo mount -o bind  /dev ubuntu-rootfs/dev
       - run: sudo mount -t proc  none ubuntu-rootfs/proc
