--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -241,8 +241,8 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: ruby-${{ needs.check.outputs.release-version }}-linux-any-loongarch64.tar.xz
-          path: ruby-${{ needs.check.outputs.release-version }}-linux-any-loongarch64.tar.xz
+          name: perl-${{ needs.check.outputs.release-version }}-linux-any-loongarch64.tar.xz
+          path: perl-${{ needs.check.outputs.release-version }}-linux-any-loongarch64.tar.xz
 
 
   linux-other:
